# KinskiGL

./: .gitmodules  CMakeLists.txt
cmake_modules/: FindGLFW3.cmake  Kinski_Helpers.cmake
src/: CMakeLists.txt
src/app/: ViewerApp.h
src/gl/: Camera.h  KinskiGL.cpp  KinskiGL.h  Renderer.cpp  ShaderLibrary.cpp  ShaderLibrary.h
src/gl/shaders/330/: gouraud.vert  phong.vert  phong_normalmap.vert  phong_skin.vert  points.vert  unlit.vert  unlit_rect.vert
src/samples/: CMakeLists.txt
src/samples/keypointer/: CMakeLists.txt
